k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
#    - host: gameshop.info
    - http:
        paths:
          - path: /api/shoppingcart(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: shopping-cart
              servicePort: 8080
          - path: /api/games(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: product-catalog
              servicePort: 8080
          - path: /api/payment(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: payment-management
              servicePort: 8080
          - path: /api/orders(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: order-management
              servicePort: 8080
          - path: /api/customers(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: customers
              servicePort: 8080
